implemented actionstate mechanic

--- a/Assets/UI Toolkit/UIBuilderData/USS/ActionStateButtonUSS.uss
+++ b/Assets/UI Toolkit/UIBuilderData/USS/ActionStateButtonUSS.uss
@@ -3,10 +3,6 @@
     height: 50px;
     align-self: center;
     justify-content: space-around;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
     font-size: 14px;
     -unity-font-style: bold;
     -unity-text-align: middle-center;
@@ -14,8 +10,27 @@
     align-items: center;
     margin-right: 2%;
     margin-left: 2%;
-    border-left-color: rgba(0, 0, 0, 0);
-    border-right-color: rgba(0, 0, 0, 0);
-    border-top-color: rgba(0, 0, 0, 0);
-    border-bottom-color: rgba(0, 0, 0, 0);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-scale-mode: stretch-to-fill;
+}
+
+.fightStateBtn {
+    width: 185px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
 }
